--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO= "mongodb+srv://robinho:robinho@alpacarnia.gkl3pow.mongodb.net/Alpacarnia?retryWrites=true&w=majority"
+JWT_SECRET_KEY="1923485djaf299"
